# arcframe-engine

./: .gitignore  README.md  pyproject.toml
src/arcframe/: types.py
src/arcframe/core/: __init__.py  config.py  context.py  game.py
src/arcframe/events/: __init__.py  event_bus.py  events.py
src/arcframe/input/: __init__.py  input_system.py
src/arcframe/rendering/: __init__.py  render_layer.py  renderer.py
src/arcframe/resources/: __init__.py  manager.py
src/arcframe/scenes/: __init__.py  scene.py  scene_manager.py
src/arcframe/ui/: __init__.py  button.py  element.py  label.py  manager.py
src/arcframe/utils/: __init__.py
